# qrforth

./: .gitignore  64  CNAME  Cargo.toml  NoCacheHTTPServer.py  README.md  about.html  base64.txt  build.sh  comp.py  decomp.py  examples.html  index.html  lib.rs_old  pack.py  qr.py  qrcode.html  qrforth-full.js  qrforth.html  save.js  script.js  test.py  unminified.js  url.txt  words.py
src/: _main.old  lib.rs  main.rs
