[package]
name = "qrforth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
# strip = "debuginfo"
lto = true

# [package.metadata.wasm-pack.profile.release]
# # wasm-opt = true
# wasm-opt = false

[dependencies]
# wasm-bindgen = "0.2.88"
# lol_alloc = "0.4.0"